plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

ext {
    redisOmVersion = '1.0.0-RC.1'
}

group = 'fr.gwen'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation("com.redis.om:redis-om-spring:2.0.0")
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    annotationProcessor "com.redis.om:redis-om-spring:2.0.0"
    testImplementation "org.testcontainers:testcontainers:2.0.2"
}

tasks.named('test') {
	useJUnitPlatform()
}
